Fixes #1389: RS Borders are not aligned. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1593 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/designer/css/designer.css
+++ b/web/src/main/webapp/designer/css/designer.css
@@ -88,7 +88,11 @@ body .panel-body {
   width: 30% !important;
   position: fixed !important;
 }
-  
+
+.panel-primary-custom {
+  margin-bottom: 2px;
+}
+
 .data .panel {
   float: left;
   width: 100%;
